# rampyaaryan

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  HOWTO.md  LANGUAGE_SPEC.md  TUTORIAL.md  api.html  changelog.html  contributing.html  examples.html  getting-started.html  howto.html  index.html  script.js  spec.html  style.css  tutorial.html
examples/: 01_namaste_duniya.ram  02_variables.ram  03_conditions.ram  04_loops.ram  05_functions.ram  06_lists.ram  07_calculator.ram  08_sorting.ram  09_number_game.ram  10_patterns.ram  11_string_magic.ram  12_math_science.ram  13_file_io.ram  14_advanced_lists.ram  15_type_system.ram  16_shabdkosh.ram  17_bitwise.ram  18_higher_order.ram  19_mini_database.ram  20_feature_showcase.ram
homebrew/: rampyaaryan.rb
npm/: README.md  install.js  package.json
scoop/: rampyaaryan.json
scripts/: install.ps1  install.sh  installer.iss
snap/: snapcraft.yaml
src/: ascii_art.c  ascii_art.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  lexer.c  lexer.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: assert_power_test.ram  aug_test.ram  comprehensive_test.ram  default_params_test.ram  destructure_test.ram  enum_test.ram  in_map_test.ram  list_comp_test.ram  math_module.ram  mega_test.ram  module_test.ram  multi_assign_test.ram  multiline_test.ram  new_features_test.ram  null_coalesce_test.ram  phase2_test.ram  phase3_test.ram  phase4_test.ram  rest_args_test.ram  (+4 more)
(+37 files in other folders)
